--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,4 +1,4 @@
-@import "../../styles";
+//@import "../../styles";
 //@import "../../../node_modules/bootstrap/scss/functions";
 //@import "../../../node_modules/bootstrap/scss/variables";
 
@@ -7,7 +7,7 @@
   box-shadow: 0px -5px 8px;
 }
 .nav-link {
-  color: $dark;
+  color: var(--dark);
   font-weight: 500;
   margin-bottom: 5px;
   transition-duration: 300ms;
@@ -23,13 +23,13 @@
   background-color: rgba(255, 69, 69, 0.1);
   //border-radius: 50px;
 
-  color: theme-color("primary");
+  color: var(--primary);
 }
 
 .nav-item.active .nav-link {
-  color: theme-color("primary");
+  color: var(--primary);
 }
 
 .nav-item.active {
-  border-bottom: 3px solid $primary;
+  border-bottom: 3px solid var(--primary);
 }
