--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-navbar></app-navbar>
+<router-outlet *ngIf="router.url === '/login'; else elseBlock"></router-outlet>
+<ng-template #elseBlock>
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
+</ng-template>
