--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<router-outlet *ngIf="router.url === '/login'; else elseBlock"></router-outlet>
+<router-outlet *ngIf="router.url.startsWith('/login'); else elseBlock"></router-outlet>
 <ng-template #elseBlock>
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
