--- a/src/app/login/component/login.component.html
+++ b/src/app/login/component/login.component.html
@@ -6,7 +6,7 @@
     Welcome To Pong Game<br>
   </h1>
   <div class="row justify-content-center">
-    <button class="btn btn-primary">
+    <button class="btn btn-primary" (click)="login()">
       <app-forty-two-logo></app-forty-two-logo>
       Login as a student
     </button>
