--- a/src/app/chat/chatting/message/message.component.scss
+++ b/src/app/chat/chatting/message/message.component.scss
@@ -4,15 +4,19 @@
   //padding: 0.6rem;
   justify-content: center;
   flex-direction: column;
-  border-radius: 18px;
   padding: 6px;
-  margin: 2px;
+  margin: 1px;
   overflow-wrap: break-word;
-  //max-width: 340px;
   max-width: 85%;
-  //height: 36px;
-  //line-height: 36px;
-  //vertical-align: middle;
+}
+
+.border-top {
+  border-top-left-radius: 0;
+}
+
+.border-bottom {
+  border-bottom-left-radius: 0;
+
 }
 
 .img-frame {
