adding loading icon for messages

--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -9,6 +9,10 @@
   width: 420px;
 }
 
+.chat {
+  background-color: #e6e6e6!important;
+}
+
 .dropdown-menu {
 //  height:500px;
 //  max-height:500px;
