--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -1,6 +1,6 @@
 #chat-toggler {
   background-color: #33393a;
-  position: absolute;
+  position: fixed;
   color: white;
   bottom: 0;
   right: 0;
