--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 
 
 $primary: #ff4545;
-$dark: #24252a;
+$dark: #282c34;
 //$secondary: #e6e6e6;
 //@import "../node_modules/bootstrap/scss/bootstrap";
 $body-bg: #e6e6e6;
