--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -4,7 +4,12 @@
 
 .navbar {
   //border-bottom: 1px solid black;
+  background-color: #e6e6e6;
   box-shadow: 0px -5px 8px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
 }
 
 .nav-item {
